--- a/coba2.css
+++ b/coba2.css
@@ -44,7 +44,7 @@ html {
   width: 794.61px;
   height: 874.14px;
   position: absolute;
-  left: 1283.09px;
+  left: 77%;
   top: -319px;
   box-shadow: 40px 4px 20px 0px rgba(0, 0, 0, 0.25);
   transform-origin: 0 0;
@@ -93,14 +93,16 @@ html {
   height: 40px;
 }
 
-.img-3641-removebg-preview-1-1 {
-  width: 301px;
-  height: 450px;
+.img-elok{
+  width: 550px;
+  height: 550px;
   position: absolute;
-  left: 996px;
-  top: 222px;
-  box-shadow: 15px -10px 15px 0px rgba(0, 0, 0, 0.25);
+  left: 940px;
+  top: 130px;
+  filter: drop-shadow( 5px 5px 10px black);
   object-fit: cover;
+  flex-shrink: 0;
+  -webkit-filter: drop-shadow( 5px 5px 10px black);
 }
 
 .ellipse-2 {
@@ -109,7 +111,7 @@ html {
   width: 160px;
   height: 195px;
   position: absolute;
-  left: -95px;
+  left: -83px;
   top: 48.44px;
   box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
   transform-origin: 0 0;
@@ -172,9 +174,13 @@ html {
   width: 100%;
   height: 118px;
   position: absolute;
-  margin-top: auto20px;
+  margin-top: 15px;
   left: 0px;
   top: 0px;
+}
+
+#navbarNav{
+  margin-top: 40px;
 }
 
 .navbar-brand {
@@ -215,8 +221,8 @@ html {
   font-size: 280px;
   font-weight: 400;
   position: absolute;
-  left: 1221.44px;
-  top: -53px;
+  left: 1300px;
+  top: -40px;
   width: 256.74px;
   height: 277.68px;
   transform-origin: 0 0;
@@ -242,7 +248,7 @@ html {
   width: 261px;
   height: 195px;
   position: absolute;
-  left: 1500px;
+  left: 92%;
   top: 174px;
   transform-origin: 0 0;
   transform: rotate(16.611deg) scale(1, 1);
@@ -253,7 +259,7 @@ html {
   width: 152px;
   height: 148px;
   position: absolute;
-  left: 1600px;
+  left: 95%;
   top: 157px;
 }
 .text-intro {
@@ -298,37 +304,36 @@ html {
   width: 100%;
   height: 827px;
   position: absolute;
-  left: 0px;
+  left: 0px; 
   top: 0px;
 }
 
-.educations-experience {
+h2 {
   color: #000000;
   text-align: center;
   font-family: "Aldrich", sans-serif;
   font-size: 40px;
   font-weight: 400;
   position: absolute;
-  left: 560px;
   top: 132px;
-  width: 558px;
+  width: 100%;
 }
 
 .education {
-  width: 1202px;
+  width: 100%;
   height: 211px;
   position: absolute;
-  left: 119px;
+  left: 0;
   top: 213px;
 }
 
 .rectangle-14 {
   background: rgba(39, 67, 90, 0.9);
   border-radius: 15px;
-  width: 1202px;
+  width: 90%;
   height: 211px;
   position: absolute;
-  left: 0px;
+  left: 5%;
   top: 0px;
   box-shadow: 15px 15px 15px 0px rgba(0, 0, 0, 0.25);
 }
@@ -340,9 +345,9 @@ html {
   font-size: 24px;
   font-weight: 600;
   position: absolute;
-  left: 813px;
+  left: 49.5%;
   top: 57px;
-  width: 322px;
+  width: 58%;
   height: 59px;
 }
 
@@ -353,9 +358,9 @@ html {
   font-size: 24px;
   font-weight: 600;
   position: absolute;
-  left: 438px;
+  left: 26.5%;
   top: 55px;
-  width: 322px;
+  width: 48%;
   height: 59px;
 }
 
@@ -366,9 +371,9 @@ html {
   font-size: 24px;
   font-weight: 600;
   position: absolute;
-  left: 65px;
+  left: 5%;
   top: 53px;
-  width: 322px;
+  width: 35%;
   height: 59px;
 }
 
@@ -379,9 +384,9 @@ html {
   font-size: 15px;
   font-weight: 400;
   position: absolute;
-  left: 133px;
+  left: 8%;
   top: 101px;
-  width: 191px;
+  width: 26%;
   height: 19px;
 }
 
@@ -392,9 +397,9 @@ html {
   font-size: 15px;
   font-weight: 400;
   position: absolute;
-  left: 505px;
+  left: 30.5%;
   top: 101px;
-  width: 191px;
+  width: 39%;
   height: 19px;
 }
 
@@ -405,9 +410,9 @@ html {
   font-size: 15px;
   font-weight: 400;
   position: absolute;
-  left: 862px;
+  left: 52%;
   top: 101px;
-  width: 228px;
+  width: 53%;
   height: 19px;
 }
 
@@ -418,24 +423,10 @@ html {
   font-size: 15px;
   font-weight: 400;
   position: absolute;
-  left: 142px;
+  left: 8.5%;
   top: 139px;
-  width: 182px;
+  width: 24.5%;
   height: 19px;
-}
-
-._2017-2020-span {
-  color: #ffffff;
-  font-family: "JosefinSans-Regular", sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-}
-
-._2017-2020-span2 {
-  color: #ffffff;
-  font-family: "JosefinSans-Regular", sans-serif;
-  font-size: 15px;
-  font-weight: 400;
 }
 
 ._2020-2023 {
@@ -445,29 +436,29 @@ html {
   font-size: 15px;
   font-weight: 400;
   position: absolute;
-  left: 510px;
+  left: 30.7%;
   top: 139px;
-  width: 182px;
+  width: 38.5%;
   height: 19px;
 }
 
-._2023-2026 {
+._2023-NOW {
   color: #ffffff;
   text-align: center;
   font-family: "JosefinSans-Regular", sans-serif;
   font-size: 15px;
   font-weight: 400;
   position: absolute;
-  left: 885px;
+  left: 53.5%;
   top: 139px;
-  width: 182px;
+  width: 50.5%;
   height: 19px;
 }
 
 .iconly-regular-outline-login {
   position: absolute;
   right: 94.51%;
-  left: 3.49%;
+  left: 7.5%;
   width: 2%;
   bottom: 60.19%;
   top: 28.44%;
@@ -489,7 +480,7 @@ html {
 .iconly-regular-outline-login2 {
   position: absolute;
   right: 65.89%;
-  left: 32.11%;
+  left: 34%;
   width: 2%;
   bottom: 58.77%;
   top: 29.86%;
@@ -511,7 +502,7 @@ html {
 .iconly-regular-outline-logout {
   position: absolute;
   right: 63.48%;
-  left: 34.53%;
+  left: 37%;
   width: 2%;
   bottom: 59.24%;
   top: 29.38%;
@@ -533,7 +524,7 @@ html {
 .iconly-regular-outline-login3 {
   position: absolute;
   right: 34.86%;
-  left: 63.14%;
+  left: 62%;
   width: 2%;
   bottom: 59.24%;
   top: 29.38%;
@@ -555,7 +546,7 @@ html {
 .iconly-regular-outline-logout2 {
   position: absolute;
   right: 32.45%;
-  left: 65.56%;
+  left: 65%;
   width: 2%;
   bottom: 59.72%;
   top: 28.91%;
@@ -577,7 +568,7 @@ html {
 .iconly-regular-outline-logout3 {
   position: absolute;
   right: 3.58%;
-  left: 94.43%;
+  left: 90.5%;
   width: 2%;
   bottom: 58.29%;
   top: 30.33%;
@@ -602,7 +593,7 @@ html {
   width: 126px;
   height: 124px;
   position: absolute;
-  left: 1117px;
+  left: 90%;
   top: 144px;
 }
 
@@ -612,7 +603,7 @@ html {
   width: 126px;
   height: 124px;
   position: absolute;
-  left: 1143px;
+  left: 92%;
   top: 111px;
 }
 
@@ -622,7 +613,7 @@ html {
   width: 126px;
   height: 124px;
   position: absolute;
-  left: -68px;
+  left: 1%;
   top: -34px;
 }
 
@@ -632,7 +623,7 @@ html {
   width: 126px;
   height: 124px;
   position: absolute;
-  left: -42px;
+  left: 3%;
   top: -67px;
 }
 
@@ -670,23 +661,22 @@ html {
 .rectangle-28 {
   background: #e7e7e7;
   border-radius: 20px;
-  width: 311px;
+  width: 370px;
   height: 225px;
   position: absolute;
-  left: 192px;
+  left: 10%;
   top: 501px;
 }
 
-.publishing-an-anthology-book-ask-i-ilmi {
+.teks-2021 {
   color: #000000;
   text-align: center;
-  font-family: "Athiti-Medium", sans-serif;
+  font-family: "Athiti", sans-serif;
   font-size: 17px;
   font-weight: 500;
-  position: absolute;
-  left: 192px;
-  top: 569px;
-  width: 319px;
+  position: sticky;
+  padding: 75px 25px;
+  width: 100%;
 }
 
 .rectangle-25 {
@@ -695,7 +685,7 @@ html {
   width: 112.94px;
   height: 40px;
   position: absolute;
-  left: 291px;
+  left: 18%;
   top: 481px;
   transform-origin: 0 0;
   transform: rotate(0deg) scale(1, 1);
@@ -707,10 +697,9 @@ html {
   font-family: "JosefinSans-Regular", sans-serif;
   font-size: 15px;
   font-weight: 400;
-  position: absolute;
-  left: 306.77px;
-  top: 495.34px;
-  width: 83px;
+  position: sticky;
+  padding: 10px;
+  width: 100%;
   height: 19px;
   transform-origin: 0 0;
   transform: rotate(0deg) scale(1, 1);
@@ -725,50 +714,22 @@ html {
 .rectangle-29 {
   background: #e7e7e7;
   border-radius: 20px;
-  width: 311px;
+  width: 370px;
   height: 225px;
   position: absolute;
-  left: 568px;
+  left: 39%;
   top: 501px;
 }
 
-.global-certification-of-web-design-basics {
+.teks-2022 {
   color: #000000;
   text-align: center;
-  font-family: "Athiti-Medium", sans-serif;
+  font-family: "Athiti", sans-serif;
   font-size: 17px;
   font-weight: 500;
-  position: absolute;
-  left: 575px;
-  top: 597px;
-  width: 300px;
-}
-
-.osis-secretary-ma-zainul-hasan-genggong {
-  color: #000000;
-  text-align: center;
-  font-family: "Athiti-Medium", sans-serif;
-  font-size: 17px;
-  font-weight: 500;
-  position: absolute;
-  left: 559px;
-  top: 540px;
-  width: 332px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.the-1st-winner-of-the-scratch-game-programming {
-  color: #000000;
-  text-align: center;
-  font-family: "Athiti-Medium", sans-serif;
-  font-size: 17px;
-  font-weight: 500;
-  position: absolute;
-  left: 589px;
-  top: 651px;
-  width: 280px;
+  position: sticky;
+  padding: 50px 25px;
+  width: 100%;
 }
 
 .rectangle-26 {
@@ -777,7 +738,7 @@ html {
   width: 112.94px;
   height: 40px;
   position: absolute;
-  left: 668px;
+  left: 47%;
   top: 481px;
 }
 
@@ -787,10 +748,10 @@ html {
   font-family: "JosefinSans-Regular", sans-serif;
   font-size: 15px;
   font-weight: 400;
-  position: absolute;
-  left: 683.83px;
-  top: 494.77px;
-  width: 83px;
+  position: sticky;
+  padding: 10px;
+  padding: 10px;
+  width: 100%;
   height: 19px;
 }
 
@@ -803,47 +764,22 @@ html {
 .rectangle-30 {
   background: #e7e7e7;
   border-radius: 20px;
-  width: 311px;
+  width: 370px;
   height: 225px;
   position: absolute;
-  left: 934px;
+  left: 68%;
   top: 501px;
 }
 
-.the-2nd-winner-of-the-front-end-web-final-project {
+.teks-2023 {
   color: #000000;
   text-align: center;
-  font-family: "Athiti-Medium", sans-serif;
+  font-family: "Athiti", sans-serif;
   font-size: 17px;
   font-weight: 500;
-  position: absolute;
-  left: 976px;
-  top: 539px;
-  width: 243px;
-}
-
-.scholarships-for-english-courses-in-pare {
-  color: #000000;
-  text-align: center;
-  font-family: "Athiti-Medium", sans-serif;
-  font-size: 17px;
-  font-weight: 500;
-  position: absolute;
-  left: 965px;
-  top: 645px;
-  width: 266px;
-}
-
-.international-certification-for-microsoft-word-2019 {
-  color: #000000;
-  text-align: center;
-  font-family: "Athiti-Medium", sans-serif;
-  font-size: 17px;
-  font-weight: 500;
-  position: absolute;
-  left: 952px;
-  top: 592px;
-  width: 295px;
+  position: sticky;
+  padding: 35px 45px;
+  width: 100%;
 }
 
 .rectangle-27 {
@@ -852,7 +788,7 @@ html {
   width: 112.94px;
   height: 40px;
   position: absolute;
-  left: 1034.07px;
+  left: 75%;
   top: 481.31px;
   transform-origin: 0 0;
   transform: rotate(0deg) scale(1, 1);
@@ -864,10 +800,9 @@ html {
   font-family: "JosefinSans-Regular", sans-serif;
   font-size: 15px;
   font-weight: 400;
-  position: absolute;
-  left: 1049.56px;
-  top: 494.87px;
-  width: 83px;
+  position: sticky;
+  padding: 10px;
+  width: 100%;
   height: 19px;
   transform-origin: 0 0;
   transform: rotate(0deg) scale(1, 1);
@@ -897,7 +832,7 @@ html {
   width: 300px;
   height: 300px;
   position: absolute;
-  left: 1594px;
+  left: 107%;
   top: 1686px;
   transform-origin: 0 0;
   transform: rotate(-180deg) scale(1, 1);
@@ -909,7 +844,7 @@ html {
   width: 400px;
   height: 400px;
   position: absolute;
-  left: 1553px;
+  left: 107%;
   top: 1899px;
   transform-origin: 0 0;
   transform: rotate(-180deg) scale(1, 1);
@@ -940,7 +875,7 @@ html {
   width: 100%;
   height: 668px;
   position: absolute;
-  left: 0px;
+  left: 6%;
   top: 222px;
 }
 
@@ -964,7 +899,7 @@ html {
   width: 100px;
   height: 113.59px;
   position: absolute;
-  left: 287px;
+  left: 17%;
   top: 222px;
   object-fit: cover;
 }
@@ -973,7 +908,7 @@ html {
   width: 100px;
   height: 114.13px;
   position: absolute;
-  left: 554px;
+  left: 33%;
   top: 222px;
   object-fit: cover;
 }
@@ -982,7 +917,7 @@ html {
   width: 100px;
   height: 113.71px;
   position: absolute;
-  left: 821px;
+  left: 49%;
   top: 222px;
   object-fit: cover;
 }
@@ -991,7 +926,7 @@ html {
   width: 100px;
   height: 100px;
   position: absolute;
-  left: 1088px;
+  left: 64%;
   top: 229px;
   object-fit: cover;
 }
@@ -1000,7 +935,7 @@ html {
   width: 120px;
   height: 120px;
   position: absolute;
-  left: 277px;
+  left: 17%;
   top: 441px;
   object-fit: cover;
 }
@@ -1009,7 +944,7 @@ html {
   width: 80px;
   height: 122.17px;
   position: absolute;
-  left: 564px;
+  left: 33%;
   top: 441px;
   object-fit: cover;
 }
@@ -1018,7 +953,7 @@ html {
   width: 100px;
   height: 112.5px;
   position: absolute;
-  left: 821px;
+  left: 49%;
   top: 445px;
   object-fit: cover;
 }
@@ -1027,7 +962,7 @@ html {
   width: 100%;
   height: 380px;
   position: absolute;
-  left: 5px;
+  left: 6%;
   top: 918px;
 }
 
@@ -1048,10 +983,19 @@ html {
 }
 
 .image-30 {
+  width: 140px;
+  height: 131.25px;
+  position: absolute;
+  left: 17%;
+  top: 124px;
+  object-fit: cover;
+}
+
+.image-31 {
   width: 350px;
   height: 131.25px;
   position: absolute;
-  left: 423px;
+  left: 26%;
   top: 124px;
   object-fit: cover;
 }
@@ -1060,7 +1004,7 @@ html {
   width: 100%;
   height: 380px;
   position: absolute;
-  left: 3px;
+  left: 6%;
   top: 1305px;
 }
 
@@ -1080,20 +1024,20 @@ html {
   justify-content: flex-start;
 }
 
-.image-31 {
+.image-32 {
   width: 110px;
   height: 110px;
   position: absolute;
-  left: 287px;
+  left: 17%;
   top: 168px;
   object-fit: cover;
 }
 
-.image-32 {
+.image-33 {
   width: 120px;
   height: 132.72px;
   position: absolute;
-  left: 531px;
+  left: 33%;
   top: 145px;
   object-fit: cover;
 }
@@ -1111,7 +1055,7 @@ html {
 .get-in-touch {
   color: #ffffff;
   text-align: center;
-  font-family: "TwCenMt-Bold", sans-serif;
+  font-family: "Athiti", sans-serif;
   font-size: 36px;
   font-weight: 700;
   position: absolute;
@@ -1121,91 +1065,41 @@ html {
   height: 42px;
 }
 
-.looking-for-help-fill-the-form-and-connect-with-me {
+.teks-getintouch {
   color: #ffffff;
   text-align: left;
-  font-family: "TwCenMt-Regular", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  position: absolute;
-  left: 133px;
-  top: 93px;
-  width: 322px;
+  font-family: "Athiti", sans-serif;
+  padding-left: 136px;
+  padding-top: 100px;
+  width: 35%;
   height: 43px;
+}
+
+h6{
+  padding-left: 55px;
 }
 
 .let-s-connect {
   color: #ffffff;
-  text-align: center;
-  font-family: "TwCenMt-Bold", sans-serif;
+  text-align: left;
+  padding-left: 15px;
+  font-family: "Athiti", sans-serif;
   font-size: 36px;
   font-weight: 700;
   position: absolute;
   left: 637px;
   top: 50px;
-  width: 225.52px;
+  width: 100%;
   height: 42px;
-}
-
-.looking-for-help-fill-the-form-and-connect-with-me2 {
-  color: #ffffff;
-  text-align: left;
-  font-family: "TwCenMt-Regular", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  position: absolute;
-  left: 653px;
-  top: 93px;
-  width: 322px;
-  height: 43px;
-}
-
-.location {
-  color: #ffffff;
-  text-align: left;
-  font-family: "TwCenMt-Bold", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-  position: absolute;
-  left: 133px;
-  top: 161px;
-  width: 130px;
-  height: 23px;
-}
-
-.phone {
-  color: #ffffff;
-  text-align: left;
-  font-family: "TwCenMt-Bold", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-  position: absolute;
-  left: 133px;
-  top: 234px;
-  width: 130px;
-  height: 23px;
-}
-
-.gmail {
-  color: #ffffff;
-  text-align: left;
-  font-family: "TwCenMt-Bold", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-  position: absolute;
-  left: 133px;
-  top: 307px;
-  width: 130px;
-  height: 23px;
 }
 
 .iconly-regular-outline-home {
   position: absolute;
   right: 89.65%;
-  left: 9.31%;
+  left: 155px;
   width: 1.04%;
   bottom: 55.33%;
-  top: 41.68%;
+  top: 47%;
   height: 2.99%;
 }
 
@@ -1225,10 +1119,10 @@ html {
   height: auto;
   position: absolute;
   right: 89.65%;
-  left: 9.31%;
+  left: 155px;
   width: 1.04%;
   bottom: 39.99%;
-  top: 57.02%;
+  top: 65.5%;
   height: 2.99%;
   overflow: visible;
 }
@@ -1236,10 +1130,10 @@ html {
 .iconly-regular-outline-send {
   position: absolute;
   right: 89.65%;
-  left: 9.31%;
+  left: 155px;
   width: 1.04%;
   bottom: 24.54%;
-  top: 72.47%;
+  top: 84.5%;
   height: 2.99%;
 }
 
@@ -1253,45 +1147,6 @@ html {
   top: 12.5%;
   height: 81.25%;
   overflow: visible;
-}
-
-.tenggarang-bondowoso {
-  color: #ffffff;
-  text-align: left;
-  font-family: "TwCenMt-Regular", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  position: absolute;
-  left: 158px;
-  top: 198px;
-  width: 213px;
-  height: 17px;
-}
-
-._082331774409 {
-  color: #ffffff;
-  text-align: left;
-  font-family: "TwCenMt-Regular", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  position: absolute;
-  left: 158px;
-  top: 270px;
-  width: 213px;
-  height: 17px;
-}
-
-.elokfaiqoh-885-gmail-com {
-  color: #ffffff;
-  text-align: left;
-  font-family: "TwCenMt-Regular", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  position: absolute;
-  left: 158px;
-  top: 344px;
-  width: 213px;
-  height: 17px;
 }
 
 .rectangle-19 {
@@ -1394,7 +1249,7 @@ html {
 .send-message {
   color: #000000;
   text-align: center;
-  font-family: "Swis721HvBt-Heavy", sans-serif;
+  font-family: "Athiti", sans-serif;
   font-size: 14px;
   font-weight: 400;
   position: absolute;
@@ -1414,17 +1269,13 @@ html {
   top: 4059px;
 }
 
-._2024-elok-faiqoh-all-rights-reserved {
+.h4_footer {
   color: #ffffff;
   text-align: center;
-  font-family: "-", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  position: absolute;
-  left: 545px;
-  bottom: 49px;
-  width: 350px;
+  font-family: "Athiti", sans-serif;
+  width: 100%;
   height: 22px;
+  padding-top: 100px;
 }
 
 ._2024-elok-faiqoh-all-rights-reserved-span {
@@ -1447,21 +1298,18 @@ html {
   font-family: "Montserrat-Bold", sans-serif;
   font-size: 15px;
   font-weight: 700;
-  position: absolute;
-  left: 627px;
-  top: 72px;
-  width: 188px;
-  height: 26px;
+  width: 100%;
+  padding-left: 0;
+  padding-top: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .ic-baseline-double-arrow {
-  width: 15px;
+  width: 100%;
   height: 15px;
   position: absolute;
-  left: 713px;
   top: 65px;
   transform: translate(0px, -15px);
   overflow: visible;
