--- a/style.css
+++ b/style.css
@@ -2,9 +2,23 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+.swal-button {
+    padding: 7px 19px;
+    border-radius: 2px;
+    background-color: #fb758d;
+    font-size: 12px;
+    border: 1px solid #3e549a;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+  }
+
+.swal-button:not([disabled]):hover {
+    background-color: #f94767;
+  }
+
 #header{
     position: fixed;
     width: 100%;
