--- a/style.css
+++ b/style.css
@@ -59,3 +59,55 @@
 #maps{
     filter: grayscale(0.7) contrast(1) opacity(0.5);
 }
+
+@media screen and (max-width: 420px){
+    #deskripsi{
+        padding:0;  
+    }
+
+    p{
+        font-size: 13px;
+    }
+
+    #hero .container{
+        padding: 5rem 1.5rem;
+    }
+
+    #hero .title-font{
+        font-size: 26px;
+    }
+
+    #openResume, #learnMore{
+        font-size: 12px;
+        padding: 7px 12px;
+    }
+
+    #img-container{
+        padding: 20px 10px;
+    }
+
+    .flex{
+        justify-content: center;
+    }
+
+    #html{
+        padding-top:40px;
+    }
+
+    #wordpress{
+        padding-left:5px;
+        padding-right:5px;
+    }
+
+    #elementor{
+        padding-left: 10px;
+    }
+
+    #image-apk{
+        width: 70px;
+    }
+
+    #quote{
+        padding: 5rem 5%;
+    }
+}
